# pypop

./: .buildinfo  .gitattributes  .mdformat.toml  .pre-commit-config.yaml  .zenodo.extras.json  .zenodo.json  AUTHORS  AUTHORS.rst  AlleleFreq.py  Arlequin.py  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYING  ChangeLog  DESIGN  DEV_NOTES.md  DataTypes.py  Filter.py  GUIApp.py  Haplo.py  HardyWeinberg.py  Homozygosity.py  INSTALL  LICENSE  MANIFEST.in  Main.py  Makefile  Meta.py  NEWS  NEWS.md  NEWS.rst  ParseFile.py  ParseTSV.py  README.md  README.rst  README_singularity.md  RandomBinning.py  SECURITY.md  (+52 more)
.doctrees/: _news.doctree  environment.pickle  index.doctree
.github/: dependabot.yml  pr-labeler.yml  release-drafter.yml  requirements-ci.txt  requirements-docs.txt
PyPop/: Arlequin.py  DataTypes.py  Filter.py  Haplo.py  HardyWeinberg.py  Homozygosity.py  Main.py  Meta.py  ParseFile.py  Utils.py
SWIG/: typemap.i
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_images/: inheritance-048a74919ea747509c628bf986924f64581e5c4e.png.map  inheritance-06c1fb1f2394bcb5d5e7d687358d42cc3f51a36e.png.map  inheritance-128c5eee1a3cd2e069022ada31990b0221181235.png.map  inheritance-1892ea00d807e6aee4f0d9810d874dcd1c2f1af2.png.map  inheritance-1b39f3cd825182433afa5bf851df3488b61888e1.png.map  inheritance-1e0b53916217a4a7f3edc0ff34afe70a6f148885.png.map  inheritance-2211ffc53e507188e850944a25699971933577aa.png.map  inheritance-26d214727d335338ed972a7723465019453e2e32.png.map  inheritance-2f37a30a136e501c5dde4cbc2d0d5f74b43e4d05.png.map  inheritance-3186979f1f88e095d290cd2ac4a5193f3a20e4cd.png.map  inheritance-32a8845d114d442109630ad99264e9624043e313.png.map  inheritance-32fdf120ff1f2a44fa9bde99ecfd5b3209a6eeeb.png.map  inheritance-38b2535f7f5e4a74e7ab2ebdfd5f1e6a72707218.png.map  inheritance-392576906bd39d971805b38b4c91dacd3acb4424.png.map  inheritance-464bb9c265d0b019fc42eb973f12c4752cf5507b.png.map  inheritance-5a32ea7c310c16816c8b81cc527d394ec57b7f77.png.map  inheritance-66cd809c645eb280e30a45d4cd80372ab9e8e4b3.png.map  inheritance-6ca56e97de9959ad57445a5a89ae82047e4b0cc9.png.map  inheritance-6dbcd7d313ff3fe9dfddd4f939829b1d14a78cad.png.map  inheritance-6ea17cd086d2c632dea5093ad28d2d1e901d6f58.png.map  inheritance-7f10e30e93627812a78a831fafee95f1c78abae0.png.map  inheritance-84b29819b0f8bc3198e856acefc023f97911c425.png.map  inheritance-8abe039e852e1659fe25deb1f2d5769c43c3eeb2.png.map  inheritance-92ff7343804496cbcc5f642cbe75ba9620001a09.png.map  inheritance-94aba2c2e0c21f86e818af0636d247658c18667d.png.map  inheritance-9b3516c2855081ea35be6af22f50f16ca4aaf4f2.png.map  inheritance-a4fab5b61e2ec7a3c866bad20bb7436dc1387e3a.png.map  inheritance-ad425a60e737f28461678241fd923f30702c88dc.png.map  inheritance-b24a26f66fd5a67da4b9ee9f24520b6c31b45857.png.map  inheritance-b68f81afefb08397a0c97fbb5001db9d08e06350.png.map  inheritance-bd1b326673edfbd722fbd584342ed1e972eb61a9.png.map  inheritance-c52d949e937b64f88b146de432c424c2d28d018c.png.map  inheritance-ca8389acd90cebc77588f549218b7bbd339099db.png.map  inheritance-cd352d59a8f0c0d24f546f7c9756b8b08c13c986.png.map  inheritance-db0fa7239b1f94fee1ffed57fa1702f8a3740c51.png.map  inheritance-e02be612559f8a65a55581e4f71f7a23326e73b9.png.map  inheritance-e25e33702dd5dba70fb0c6562e7925b1574b6418.png.map  inheritance-ea8ccc4ad322491aed0d9c1e8211aeffadad9b24.png.map  inheritance-ff23c719ec3b6b3a980b43626ff39be2fe19a15a.png.map
_latexbuild/: pypop-guide.aux  pypop-guide.fdb_latexmk  pypop-guide.fls  pypop-guide.ilg  pypop-guide.out  pypop-guide.tex  pypop-guide.toc
_sources/: index.rst.txt
_static/: api_index_override.rst  custom.css  documentation_options.js  pygments.css
api/: index.html
data/: config-canonical.ini
docs/: biblio.html  gfdl.html  guide-chapter-changes.html  guide-chapter-contributing.html  guide-chapter-install.html  guide-chapter-instructions.html  guide-chapter-usage.html  guide-preface-authors.html  guide-preface-howto.html  guide-preface-news.html  guide-preface.html  guide-usage-configfile.html  guide-usage-datafile.html  index.html  install-from-source.html  instructions-haplo.html  instructions-locus-info.html  licenses.html  pypop-guide.html  references.html  style.css
emhaplofreq/: ChangeLog  Makefile  Makefile.swig  emhaplofreq.c  emhaplofreq.h  emhaplofreq.i  emhaplofreq_LDfix.c  emhaplofreq_OLD.c  emhaplofreq_wrap.i  test.pop  test.py  test_nomiss.ini  test_nomiss.pop
gthwe/: ChangeLog  Makefile  README.1  cal_const.c  cal_n.c  cal_prob.c  check_file.c  do_switch.c  example-2alleles.gtout  func.h  gthwe  gthwe_wrap.i  hwe.c  hwe.h  ln_p_value.c  new_rand.c  print_data.c  random_choose.c  read_data.c  select_index.c  stamp_time.c  statistics.c  test_switch.c  to_calculate_log.c
haplo-stats/: Makefile  README.md  haplo-test.py  haplo-test2.py  haplo_em_pin.c  haplo_em_pin.h  haplo_em_pin_ORIG.c  haplo_em_pin_wrap.i  haplostats_wrap.i  test1.py  test2.py  test3.py  test3_asym.py
hw-exact/: hw-exact.c
obsolete/: ChangeLog  case-control.py  hweEnumTest.py
popdata/: index.html  index.html.orig  robots.txt
pval/: Makefile  Rconfig.h  Rmath.h  comparison-r-code-vs-num-recipes.txt  fmin2.c  gamma.c  nmath.h  pgamma.c  pval.c  pval_wrap.i
pypop/: Arlequin.py  Filter.py
reference/: AUTHORS.xml  COPYING.FDL.xml  COPYING.xml  INSTALL.xml  Makefile  README.xml  USAFEL-UchiTelle-out.txt  USAFEL-UchiTelle-out.xml  biblio.xml  biblio.xsl  biostat.xml  citation.dsl  citation.xsl  cite_commands  design.dia  em-performance.ps  fileformat.txt  fo.xsl  glossary.xml  graphics.xsl  hlaintro.xml  html.xsl  hwpspecs.txt  install-screen.xml  instructions.xml  latex-common.xsl  latex.xsl  ld-wn-summary.ps  methods.xml  pagesetup.xsl  print.dsl  psb2002.xml  pypop-appendices.xml  pypop-appendix.xml  pypop-guide.xml  pypop-reference.xml  pypop-ws.xml  pypop.xml  style.css  text.xsl  (+3 more)
slatkin-exact/: ChangeLog  Makefile  README  enumerate.c  monte-carlo.c  monte-carlo_distribution.c  monte-carlo_wrap.i
tests/: base.py  conftest.py  test_100k_Emhaplofreq.py  test_Filters.py  (+16 more)
(+1516 files in other folders)
