[build_ext]
inplace=1

#[project]
#python_requires = ">=3.9"

[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686"]  # Skip 32-bit builds
test-extras = ["test"]
test-command = "pytest -s -v {project}/tests"

[tool.cibuildwheel.linux]
before-all="yum install -y swig gsl-devel"

#[tool.cibuildwheel.macos]
#before-all = "brew install swig gsl"
# FIXME: on MacOS, cibuildwheel team suggests building these from
# source within the container, rather than using 'brew'

